<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@color/white" />

    <EditText
        android:id="@+id/edit_inputfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_dlg_edithint_inputfilename" />

    <CheckBox
        android:id="@+id/check_asalbum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_dlg_check_asalbum" />

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="0,1" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="5dip"
            android:background="@color/white" />

        <TableRow>

            <Button
                android:id="@+id/btn_createok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/str_dlg_btn_create" />

            <Button
                android:id="@+id/btn_creatcancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/str_dlg_btn_cancle" />
        </TableRow>
    </TableLayout>

</LinearLayout>