<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_bg"
    android:orientation="vertical" >

  <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <com.winad.android.wall.Adview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical" >

            <!-- AdView中包裹的动画 和 Banner展现形式,二者只能展示一种,默认显示动画的入口,如需显示banner,请将动画设为android:visibility="gone"即可 -->
            <!-- 以下为动画的入口， -->

            <ImageView
                android:id="@+id/gifView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"/>
            <!-- 默认情况下为Banner方式的入口， -->

            <include
                android:id="@+id/banner"
                layout="@layout/winad_sliding_normal_banner" />
        </com.winad.android.wall.Adview>
    </LinearLayout>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bg"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dip"
            android:background="@color/color_light_blue" >
        </View>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2,3" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/color_light_blue" >
            </View>

            <TableRow>

                <Button
                    android:id="@+id/btn_returnroot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/str_btn_returnroot" />

                <Button
                    android:id="@+id/btn_returnback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/str_btn_returnback" />

                <Button
                    android:id="@+id/btn_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@string/str_btn_help" />

                <Button
                    android:id="@+id/btn_createnew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:text="@string/str_btn_createdir" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/text_nowpath"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="left"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/color_text" />

        <TextView
            android:id="@+id/text_showtip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/str_text_explorertipadd"
            android:textColor="@color/color_text" />

        <ListView
            android:id="@+id/file_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>